seaqt/QtWidgets/gen_qcolormap.h

class QColor;
class QColormap;
typedef struct QColor QColor;
typedef struct QColormap QColormap;
QColormap* QColormap_new(QColormap* colormap);
void QColormap_initialize();
void QColormap_cleanup();
QColormap* QColormap_instance();
void QColormap_operatorAssign(QColormap* self, QColormap* colormap);
int QColormap_mode(const QColormap* self);
int QColormap_depth(const QColormap* self);
int QColormap_size(const QColormap* self);
unsigned int QColormap_pixel(const QColormap* self, QColor* color);
QColor* QColormap_colorAt(const QColormap* self, unsigned int pixel);
struct miqt_array /* of QColor* */  QColormap_colormap(const QColormap* self);
QColormap* QColormap_instance1(int screen);